testData/MoreStrictNullSafety/tests/Mixed.kt
//todo

//class Overriding: JavaClass() {
//    override fun overridable(<error descr="Implicit conversion of platform type to non-nullable">v: Value</error>) {
//    }
//}
//
//class OverridingSafe: JavaClass() {
//    override fun overridable(v: Value?) {
//    }
//}

fun